workspace/compiler/tests/snapshots/test_snap_python__py_dataclass_basic_ir.snap
---
source: workspace/compiler/tests/snap_python.rs
assertion_line: 104
expression: sorted
---
{
    "snap_dataclass_basic.py": Module(
        Symbol {
            name: "snap_dataclass_basic",
            path: Local(
                "snap_dataclass_basic.py",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Module {
                members: Some(
                    [
                        Local(
                            "snap_dataclass_basic::Point",
                        ),
                    ],
                ),
            },
        },
    ),
    "snap_dataclass_basic::Point": RecordType(
        Symbol {
            name: "Point",
            path: Local(
                "snap_dataclass_basic::Point",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Record {
                name: Some(
                    "Point",
                ),
                generics: None,
                fields: [
                    Known(
                        KnownField {
                            key: Ident(
                                "x",
                            ),
                            type: Some(
                                TypeReference(
                                    TypeReference {
                                        identifier: "builtins.int",
                                        generic_args: None,
                                    },
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: None,
                        },
                    ),
                    Known(
                        KnownField {
                            key: Ident(
                                "y",
                            ),
                            type: Some(
                                TypeReference(
                                    TypeReference {
                                        identifier: "builtins.int",
                                        generic_args: None,
                                    },
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: None,
                        },
                    ),
                    Known(
                        KnownField {
                            key: Ident(
                                "label",
                            ),
                            type: Some(
                                TypeReference(
                                    TypeReference {
                                        identifier: "builtins.str",
                                        generic_args: None,
                                    },
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: None,
                        },
                    ),
                ],
                call_signatures: None,
                constructors: None,
                methods: None,
                index_signatures: None,
                super_types: None,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
}
