workspace/compiler/tests/snapshots/test_snap_python__py_enum_ir.snap
---
source: workspace/compiler/tests/snap_python.rs
assertion_line: 220
expression: sorted
---
{
    "snap_enum.py": Module(
        Symbol {
            name: "snap_enum",
            path: Local(
                "snap_enum.py",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Module {
                members: Some(
                    [
                        Local(
                            "snap_enum::Direction",
                        ),
                        Local(
                            "snap_enum::Status",
                        ),
                    ],
                ),
            },
        },
    ),
    "snap_enum::Direction": SumType(
        Symbol {
            name: "Direction",
            path: Local(
                "snap_enum::Direction",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: SumType {
                variants: [
                    SumVariant {
                        name: "NORTH",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: String,
                                            value: "N",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Str(\"N\")",
                        ),
                        discriminant: None,
                    },
                    SumVariant {
                        name: "SOUTH",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: String,
                                            value: "S",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Str(\"S\")",
                        ),
                        discriminant: None,
                    },
                    SumVariant {
                        name: "EAST",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: String,
                                            value: "E",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Str(\"E\")",
                        ),
                        discriminant: None,
                    },
                    SumVariant {
                        name: "WEST",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: String,
                                            value: "W",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Str(\"W\")",
                        ),
                        discriminant: None,
                    },
                ],
                generics: None,
                methods: None,
                implemented_protocols: None,
                super_types: None,
                members: None,
                underlying: None,
            },
        },
    ),
    "snap_enum::Status": SumType(
        Symbol {
            name: "Status",
            path: Local(
                "snap_enum::Status",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: SumType {
                variants: [
                    SumVariant {
                        name: "PENDING",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: Number,
                                            value: "0",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Int(0)",
                        ),
                        discriminant: None,
                    },
                    SumVariant {
                        name: "ACTIVE",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: Number,
                                            value: "1",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Int(1)",
                        ),
                        discriminant: None,
                    },
                    SumVariant {
                        name: "INACTIVE",
                        data: Some(
                            Tuple(
                                [
                                    Literal(
                                        LiteralValue {
                                            kind: Number,
                                            value: "2",
                                        },
                                    ),
                                ],
                            ),
                        ),
                        documentation: Some(
                            "value = Int(2)",
                        ),
                        discriminant: None,
                    },
                ],
                generics: None,
                methods: None,
                implemented_protocols: None,
                super_types: None,
                members: None,
                underlying: None,
            },
        },
    ),
}
